--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a><a href="#intro"><span>Earn Tron Contract</span></a></h1>
+        <h1 class="text-light"><a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a><a href="#intro"><span>Earn Tron</span></a></h1>
         
       </div>
 
