--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="https://shasta.tronscan.org/#/contract/TQ32urz4ZWjq9RMQPabsbb1Lha4bPhLr7a/code">Ver Contrato</a></li>
+          <li><a href="https://tronscan.org/#/contract/TV1R4Vqw3eiabXfaYB42YAeadXYSzXwcwt/code">Ver Contrato</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -215,8 +215,6 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
