--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="es" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Tron Milenium</title>
+  <title>TRX CrowdFunding</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Tron Milenium" name="keywords">
-  <meta content="Tron Milenium Contract" name="description">
+  <meta content="TRX CrowdFunding" name="keywords">
+  <meta content="TRX CrowdFunding Contract" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -47,13 +47,13 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a><a href="#intro"><span>Tron Milenium</span></a></h1>
+        <h1 class="text-light"><a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a><a href="#intro"><span>TRX CrowdFunding</span></a></h1>
         
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="https://tronscan.org/#/contract/TQz9BnXoM4fCNy5JCnNzvxRxN6yPz9r1nb/code">Ver Contrato</a></li>
+          <li><a href="https://shasta.tronscan.org/#/contract/TJE8gGkYX7YxzjfrsJb5GZdiny6o94QNEb/code">Ver Contrato</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -98,7 +98,7 @@
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Que es Tron Milenium Contract?</a></h4>
+              <h4 class="title"><a href="">Que es TRX CrowdFunding Contract?</a></h4>
               <p class="description">Es un contrato inteligente verificado en TRON Blockchain (TRX). Extremadamente imposible de piratear porque es inmutable (protegido de cualquier modificación) y su resultado es validado por los participantes elegidos en la red. La transparencia está asegurada al 100%.</p>
             </div>
 
@@ -155,7 +155,7 @@
         <div class="row">
 
           <div class="col-lg-8 col-md-12 footer-info">
-            <h3>Tron Milenium Contract</h3>
+            <h3>TRX CrowdFunding Contract</h3>
             <p>Las recompensas de los referidos se distribuyen automáticamente a su saldo y puede retirarlas en cualquier momento, la recompensa varia según el nivel de sercania.*</p>
             <p>Al realizar tu deposito se cobra una tarifa del 10% que se destina al mantenimiento del sitio web, soporte técnico.**</p>
             <p>Al realizar tu retiro realizamos un interés compuesto del 25% que se añade directamente a tu inversión para promover el largo uso de la plataforma y protegernos de las Ballenas Crypto.***</p>
@@ -178,7 +178,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Tron Milenium Contract</strong> 2020. All Rights Reserved
+        &copy; Copyright <strong>TRX CrowdFunding Contract</strong> 2020. All Rights Reserved
       </div>
       <div class="credits">
         <!--
