--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="https://shasta.tronscan.org/#/contract/TQ32urz4ZWjq9RMQPabsbb1Lha4bPhLr7a/code">Ver Contrato</a></li>
+          <li><a href="https://tronscan.org/#/contract/TV1R4Vqw3eiabXfaYB42YAeadXYSzXwcwt/code">Ver Contrato</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -92,7 +92,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>Sobre Nosostros</h3>
+          <h3>Sobre Nosotros</h3>
         </header>
 
         <div class="row about-container">
@@ -159,7 +159,7 @@
 
           <div class="col-lg-8 col-md-12 footer-info">
             <h3>Earn Tron Contract</h3>
-            <p>Las recompensas de los referidos se distribuyen automáticamente a su saldo y puede retirarlas en cualquier momento, la recompensa varia según el nivel de sercania.*</p>
+            <p>Las recompensas de los referidos se distribuyen automáticamente a su saldo y puede retirarlas en cualquier momento, la recompensa varia según el nivel de cercanía.*</p>
             <p>Al realizar tu deposito se cobra una tarifa del 4% que se destina al mantenimiento del sitio web, soporte técnico y el 2% para anuncios de marketing.**</p>
             <p>Al realizar tu retiro realizamos un interés compuesto del 25% que se añade directamente a tu inversión para promover el largo uso de la plataforma y protegernos de las Ballenas Crypto.***</p>
           </div>
@@ -167,12 +167,21 @@
           <div class="col-lg-4 col-md-12 footer-links">
             <h4>Enlaces Útiles</h4>
             <ul>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a href="https://earntron.ml/">Inicio</a></li>
+              <li><a href="https://earntron.ml/#why-us">Services</a></li>
+              <li><a href="https://www.termsofservicegenerator.net/live.php?token=crdbTmnN1rShc618FenOpN59BGkbjqhn">Terms of service</a></li>
+              <li><a href="https://www.privacypolicygenerator.info/live.php?token=Co9vIiXSxRgAaJxmelYP1fSELW2wfsBh">Privacy policy</a></li>
             </ul>
+
+<div id="google_translate_element" class="google"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'en,fr,it,pt', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, gaTrack: true}, 'google_translate_element');
+        }
+</script>
+
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
           </div>
 
         </div>
