--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,26 @@
             </ul>
           </div>
 
+          <!-- INICIO google translate -->
+          <div id="google_translate_element" class="google"></div>
+
+          <script type="text/javascript">
+            function googleTranslateElementInit(){
+              new google.translate.TranlateElement(
+                {
+                  pageLanguage: 'es', 
+                  includedLanguages: 'en,fr,it,pt,dt', 
+                  layout: google.translate.TranlateElement.InlineLayout.SIMPLE, 
+                  gaTrack: true
+                },
+                'google_translate_element'
+              );
+            };
+          </script>
+          <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+          <!-- FIN google translate -->
+
         </div>
       </div>
     </div>
