--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+  
 
   <main id="main">
 
@@ -56,6 +57,7 @@
 
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
+          <li><a href="https://t.me/joinchat/TvC0JlKSdSFvpWLjLc8rzQ">Telegram</a></li>
           <li><a href="https://tronscan.org/#/contract/TV1R4Vqw3eiabXfaYB42YAeadXYSzXwcwt/code">Ver Contrato</a></li>
         </ul>
       </nav><!-- .main-nav -->
@@ -190,7 +192,7 @@ function googleTranslateElementInit() {
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Earn Tron Contract</strong> 2020. All Rights Reserved
+        &copy; Copyright <strong>Earn Tron Contract</strong> 2021. All Rights Reserved
       </div>
       <div class="credits">
         <!--
