--- a/public/index.html
+++ b/public/index.html
@@ -131,18 +131,14 @@
       </div>
     </section><!-- #about -->
 
+    <!-- react JS -->
+
     <input id="sponsor" type="hidden" value="Mi abuela es la mejor" readonly>
     <input id="tarifa" type="hidden"  value="0" readonly>
-
-    <!--==========================
-      Choose your Plan
-    ============================-->
     
-      <div id="root">
-
-      </div>
+      <div id="root"></div>
     
-    <!-- #My Office -->
+    <!-- react js -->
 
   </main>
 
